# directory_of_organizations

./: .env_example  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  docker-compose.yml  docker-entrypoint.sh  pyproject.toml
alembic/: env.py
alembic/versions/: 07a62af4f985_add_building_field.py  9812d4369099_add_organization_and_building_model.py  b248b0655e06_add_activity_model.py
app/: main.py
app/api/: routers.py
app/api/endpoints/: __init__.py  activities.py  buildings.py  organizations.py
app/core/: auth.py  base.py  config.py  db.py  loader.py
app/crud/: organizations.py  utils.py
app/models/: buildings.py  organizations.py
app/schemas/: activities.py  buildings.py  organizations.py
app/utils/: test_data.py
